--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,23 +6,24 @@
     <p> Choose from any of the following options to import your blocklist into uBlock Origin, uBlacklist, or a Hosts file:</p>
 
     <h2>uBlock Origin</h2>
+
     <div>
-        <a href="https://subscribe.adblockplus.org/?location={{ base_domain }}/ublock&title=Grabify%20Blocklist">Subscribe</a>
+        <a class="sub" href="https://subscribe.adblockplus.org/?location={{ base_domain }}/ublock&title=Grabify%20Blocklist">Subscribe</a>
     </div>
     <div>
-        <a href="{{ base_domain }}/ublock">{{ base_domain }}/ublock</a>
+        <a class="local" href="{{ base_domain }}/ublock">{{ base_domain }}/ublock</a>
     </div>
 
     <h2>uBlacklist</h2>
     <div>
-        <a href="https://iorate.github.io/ublacklist/subscribe?name=Grabify+Blocklist&url=https://{{ base_domain }}/ublacklist">Subscribe</a>
+        <a class="sub" href="https://iorate.github.io/ublacklist/subscribe?name=Grabify+Blocklist&url=https://{{ base_domain }}/ublacklist">Subscribe</a>
     </div>
     <div>
-        <a href="{{ base_domain }}/ublacklist">{{ base_domain }}/ublacklist</a>
+        <a class="local" href="{{ base_domain }}/ublacklist">{{ base_domain }}/ublacklist</a>
     </div>
 
     <h2>Hosts file</h2>
     <div>
-        <a href="{{ base_domain }}/hosts">{{ base_domain }}/hosts</a>
+        <a class="local" href="{{ base_domain }}/hosts">{{ base_domain }}/hosts</a>
     </div>
 </html>
