--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -5,22 +5,42 @@
     <h1>Grabify Blocklist</h1>
     <p> Choose from any of the following options to import your blocklist into uBlock Origin, uBlacklist, or a Hosts file:</p>
 
-    <h2>uBlock Origin</h2>
 
+    <h2>uBlock Origin</h2>
+      
     <div>
         <a class="sub" href="https://subscribe.adblockplus.org/?location={{ base_domain }}/ublock&title=Grabify%20Blocklist">Subscribe</a>
+        <span class="note">
+            <p class="note">Note: Due to
+                <a class="inline" href="https://github.com/gorhill/uBlock/wiki/Dashboard:-Filter-lists#adding-via-approved-external-websites"> 
+                security restrictions</a>,
+                this link may only work by right clicking "Subscribe" > "Subscribe to filter list"
+            </p>
+        </span>
     </div>
+    
     <div>
         <a class="local" href="{{ base_domain }}/ublock">{{ base_domain }}/ublock</a>
     </div>
 
+
     <h2>uBlacklist</h2>
+
     <div>
-        <a class="sub" href="https://iorate.github.io/ublacklist/subscribe?name=Grabify+Blocklist&url=https://{{ base_domain }}/ublacklist">Subscribe</a>
+        <a class="sub" href="https://ublacklist.github.io/rulesets/subscribe?name=Grabify+Blocklist&url={{ base_domain }}/ublacklist">Subscribe</a>
+        <span class="note">
+            <p class="note">Note: To subscribe with this link, make sure 
+                "<a class="inline" href="https://ublacklist.github.io/docs/advanced-features#subscription-links">Enable ruleset subscription links</a>"
+                is enabled in your uBlacklist settings
+            </p>
+        </span>    
     </div>
+    
+
     <div>
         <a class="local" href="{{ base_domain }}/ublacklist">{{ base_domain }}/ublacklist</a>
     </div>
+
 
     <h2>Hosts file</h2>
     <div>
