--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" type="text/css" href="{{ stylesheet }}">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <h1>Grabify Blocklist</h1>
-    <p> Choose from any of the following options to import your blocklist into uBlock Origin, uBlacklist, or a Hosts file:</p>
+    <p> Choose from the following options to import your blocklist into uBlock Origin, uBlacklist, or a Hosts file:</p>
 
 
     <h2>uBlock Origin</h2>
@@ -11,16 +12,17 @@
     <div>
         <a class="sub" href="https://subscribe.adblockplus.org/?location={{ base_domain }}/ublock&title=Grabify%20Blocklist">Subscribe</a>
         <span class="note">
-            <p class="note">Note: Due to
+            <p class="note">
+                <strong>Note:</strong> Due to
                 <a class="inline" href="https://github.com/gorhill/uBlock/wiki/Dashboard:-Filter-lists#adding-via-approved-external-websites"> 
                 security restrictions</a>,
-                this link may only work by right clicking "Subscribe" > "Subscribe to filter list"
+                you may need to right click this link > "Subscribe to filter list..." instead of opening the link outright.
             </p>
         </span>
     </div>
     
     <div>
-        <a class="local" href="{{ base_domain }}/ublock">{{ base_domain }}/ublock</a>
+        <a class="local" href="{{ base_domain }}/ublock">Plain ublock file</a>
     </div>
 
 
@@ -29,21 +31,30 @@
     <div>
         <a class="sub" href="https://ublacklist.github.io/rulesets/subscribe?name=Grabify+Blocklist&url={{ base_domain }}/ublacklist">Subscribe</a>
         <span class="note">
-            <p class="note">Note: To subscribe with this link, make sure 
+            <p class="note">
+                <strong>Note:</strong> To use this subscription link, you must have 
                 "<a class="inline" href="https://ublacklist.github.io/docs/advanced-features#subscription-links">Enable ruleset subscription links</a>"
-                is enabled in your uBlacklist settings
+                turned on in your uBlacklist settings.
             </p>
         </span>    
     </div>
     
 
     <div>
-        <a class="local" href="{{ base_domain }}/ublacklist">{{ base_domain }}/ublacklist</a>
+        <a class="local" href="{{ base_domain }}/ublacklist">Plain ublacklist file</a>
     </div>
 
 
     <h2>Hosts file</h2>
     <div>
-        <a class="local" href="{{ base_domain }}/hosts">{{ base_domain }}/hosts</a>
+        <a class="local" href="{{ base_domain }}/hosts">Plain hosts file</a>
     </div>
+
+
+    <footer>
+        <hr>
+        <div>
+            <a class="github-button" href="https://github.com/JonasLong/DeGrabify" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" aria-label="JonasLong/DeGrabify on GitHub">View on GitHub</a>
+        </div>
+    </footer>
 </html>
