Feat(server): Add plain domain list

--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -47,9 +47,13 @@
 
     <h2>Hosts file</h2>
     <div>
-        <a class="local" href="{{ base_domain }}/hosts">Plain hosts file</a>
+        <a class="local" href="{{ base_domain }}/hosts">Hosts file</a>
     </div>
 
+    <h2>Plain domain list</h2>
+    <div>
+        <a class="local" href="{{ base_domain }}/plain">Plain list</a>
+    </div>
 
     <footer>
         <hr>
