Fix(homepage.html, style.css): ublacklist spacing

--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -27,7 +27,7 @@
 
 
     <h2>uBlacklist</h2>
-    <p>Hides pages from Google and DDG search results, but does not stop you from connecting to the site if you click a link elsewhere.</p>
+    <p class="sectioninfo">Hides pages from Google and DDG search results, but does not stop you from connecting to the site if you click a link elsewhere.</p>
 
     <div>
         <a class="sub" href="https://ublacklist.github.io/rulesets/subscribe?name=Grabify+Blocklist&url={{ base_domain }}/ublacklist">Subscribe</a>
